--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,8 @@
 application: monashclubtracker
 version: 1
-runtime: python
+runtime: python27
 api_version: 1
+threadsafe: true
 
 handlers:
 
@@ -15,6 +16,6 @@ handlers:
   static_dir: assets/img
   
 - url: /.*
-  script: trackingapp.py
+  script: trackingapp.app
   
   
